--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -111,24 +111,32 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 \begin{itemize} 
 \item Proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone, with a default of 100% as the LRP
 \item Proportional LRPs are recommended as the default approach for estimating LRPS for Pacific salmon and triggering rebuilding plans under the *Fisheries Act*
-\item Two advantages of proportional LRPs is that they are consistent with the established framework for status assessments under the WSP and the spatial scale of proportional LRPs can be adapted to match various management levers, from CU to regional scales.
-
-
-\end{itemize}
+\item Advantages of proportional LRPs include that they are consistent with the established framework for status assessments under the WSP, they are easy to communicate, and the spatial scale of proportional LRPs can be easily adapted to match various management levers, from CU to regional scales.
+\item LRPs on the aggregate SMU-level abundances ('aggregate abundance LRPs') may be required for fisheries management decisions at the SMU scale, and are considered supplemental to proportional LRPs
+\item Two types of aggregate abundance LRPs are identified: logistic regression LRPs and projection LRPs. Both rely on the relationship between observed aggregate abundances and statuses of component CUs, but logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  
+\item Both aggregate abundance LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone
+\item An assumption of the logistic LRPs is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance among CUs or relative productivities and capacities of CUs is non-stationary, logistic regression LRPs may not represent serious harm under current or future conditions. 
+\item Unlike logistic regression LRPs, projection LRPs can integrate plausible ranges of parameter uncertainties that may differ from those observed historically
+\item One advantage of both aggregate abundance LRPs over proportional LRPs is that uncertainties in CU-level benchmarks and assessments can be accounted for explicitly and quantitatively because the CU- level and SMU-level models are integrated.
+\item For both aggregate abundance LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging by combining results from stochastic random trials across those structural assumptions to derive a single LRP 
+\item Unlike logistic regression LRPs, for projection LRPs there is no uncertainty from statistical estimation. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probability. 
+\end{itemize} 
 \end{tcolorbox}
 
 
 ### Proportional LRPs
 
-Proportion-based or proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone. To be consistent with the intent of the WSP of preserving biodiversity at the CU-level, we identify an LRP at 100% of CUs having status above Red (i.e., either Amber or Green). <!--CH Sue suggested removing as she wasn't sure what happened when LRP is breached, I think. I agree the act of breaching is not entirely relevant here, but I did think ht helped explain our propotion based LRP "When any individual CU falls into the Red zone, then the LRP is considered breached."--> See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the Red zone, and Section \@ref(recommendations) for a description of associated uncertainties. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines). See.
+Proportion-based or proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone. To be consistent with the intent of the WSP of preserving biodiversity at the CU-level, we identify an LRP at 100% of CUs having status above Red (i.e., either Amber or Green). <!--CH Sue suggested removing as she wasn't sure what happened when LRP is breached, I think. I agree the act of breaching is not entirely relevant here, but I did think it might help explain the proportional LRP "When any individual CU falls into the Red zone, then the LRP is considered breached."--> See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the Red zone, and Section \@ref(recommendations) for a description of associated uncertainties. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines). See.
 
-<!--CH: revserse order of principles in each section to align with Julie's new numbering-->
-Proportional LRPs are based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer reviewed WSP status assessments or the Pacific Salmon Status Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. Proportional LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP, recognizing that risk of loss of stock structure can itself be a form of serious harm. Proportional LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, proportional LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU level benchmarks to CU statuses, LRPs and SMU statuses.  Proportional LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
+*Alignment with LRP Principles*
+
+Proportional LRPs are based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the Pacific Salmon Status Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. Proportional LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU being in the Red zone under the WSP, given that the deterioration of stock structure can itself be a form of serious harm. Proportional LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, proportional LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses, to LRPs and SMU statuses (Principle 5).  Proportional LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
 
 A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide of 2019.  
 
 
-In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level abundance that account for component CU-level statuses: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)). Both aggregate abundance LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data. Both of these LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
+In addition to proportional LRPs, we developed LRPs based on aggregate SMU-level abundance accounting for component CU-level statuses. These "aggregate abundance LRPs" may be required for fisheries management decisions at the SMU scale, but are considered supplemental to proportional LRPs for FSP purposes. We identified two types of aggregate abundance LRPs: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)).  Both LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  Also, both LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
+<!--CH remove, as the sentence above captures this in a more nuanced way?: The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data.--> 
 
 \begin{figure}[ht]
 \centering
@@ -181,29 +189,31 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 ```
 
 
-We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs (Principle 4). Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (In review). For example, evaluating the assumptions that aggregate abundances are linearly related to log-odds of all CUs being above their lower benchmarks, observations are independent, and there are no influential outliers. In addition, the statistical significance of the predictor variable (aggregate abundance) and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using a performance metric called the hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
+We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (In review). For example, evaluating the assumptions that aggregate abundances are linearly related to log-odds of all CUs being above their lower benchmarks, observations are independent, and there are no influential outliers. In addition, the statistical significance of the predictor variable (aggregate abundance) and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using a performance metric called the hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
 
 
 We applied a single metric on spawner abundances to approximate CU-status when using the logistic regression approach because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Pacific Salmon Status Scanner.
 
-Using a single-metric proxy for CU status also allowed the use of statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments can be propagated to the development of the LRP and the assessment against that LRP. The fit logistic model allows the probability of being below the LRP in a given year to be predicted based on aggregate abundance, with the predicted probability explicitly accounting for uncertainty in CU-level assessments against their lower benchmarks.  
+One advantage of logistic regression LRPs over proportional LRPs is that uncertainties in CU-level benchmarks and assessments can be accounted for explicitly. Using a single-metric proxy for CU status also allowed the use of statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments can be propagated to the development of the LRP and the assessment against that LRP. The probability of all CUs being above their lower benchmarks in a given year can be predicted from aggregate abundance, with the predicted probability explicitly accounting for uncertainty in CU-level assessments against lower benchmarks.  
 
-Furthermore, structural uncertainty in underlying assumptions made when developing CU-level benchmarks, such as the form of the spawner-recruitment relationship, can be addressed in at least three ways. First, the weight of evidence for various assumptions can be evaluated to identify the assumption with the most support, which is then used for LRP development. This can include relying on support for various model forms provided in previous stock assessments or from meta-analyses. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the inverse of the variances, the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
-
-Logistic regression LRPs are partly aligned with Principle 1, the of use best available information, because they use only one metric of spawner abundances omitting metrics on trends which are useful in data-limited contexts. CUs that do not have abundance-based benchmarks are omitted from consideration of serous harm in this approach even when trends are available to estimate status. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture random noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (In review) for more details). In some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Pacific Salmon Status Scanner. Logistic regression LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. 
-
-Logistic regression LRPs are operational (Principle 3) to some extent when harvest management occurs at the aggregate level and requires aggregate abundance LRPs to inform management decisions. However, they are more difficult to communicate being derived from model outputs, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify from a science perspective. <!--CH removed since it's mostly repeated in the next pgh: "Logistic-regression based LRPs may not be appropriate operationally if new management procedures are applied that result in changes in covariance among CUs. For fisheries without a history of weak-stock management the assumption of stationarity in covariance in exploitation may hold, as in Interior Fraser River Coho, supporting their application of logistic regression approaches to identify recovery targets."-->
+In addition, structural uncertainty in underlying assumptions made when developing CU-level benchmarks, such as the form of the spawner-recruitment relationship, can be addressed in at least three ways. First, the weight of evidence for various assumptions can be evaluated to identify the assumption with the most support, which is then used for LRP development. This can include relying on support for various model forms provided in previous stock assessments or from meta-analyses. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the inverse of the variances, the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
 
 
-Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  One assumption of this method is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance among CUs or relative productivities and capacities of CUs is non-stationary, logistic regression LRPs may be unreliable to represent current or future conditions. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs varies (e.g., due to change towards weak stock management or when exploitation varies with the abundance of other species).  Logistic regression LRPs are aligned with Principle 6 to the extent that aggregate abundances are an acceptably reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from the multidimensional approach recommended under the WSP.
+*Alignment with LRP Principles*
+Logistic regression LRPs do not use the best available information for CU statuses in all cases (Principle 1), because they use only one metric of spawner abundances omitting metrics on trends which are useful in data-limited contexts. CUs that do not have abundance-based benchmarks are omitted from consideration of serous harm in this approach even when trends are available to estimate status. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture random noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (In review) for more details). THerefore, in some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Pacific Salmon Status Scanner. Logistic regression LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. 
+
+Logistic regression LRPs are operational (Principle 3) when harvest management occurs at the aggregate level and requires aggregate abundance LRPs to inform management decisions. However, they are more difficult to communicate being derived from model outputs, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify from a science perspective. <!--CH removed since it's mostly repeated in the next pgh: "Logistic-regression based LRPs may not be appropriate operationally if new management procedures are applied that result in changes in covariance among CUs. For fisheries without a history of weak-stock management the assumption of stationarity in covariance in exploitation may hold, as in Interior Fraser River Coho, supporting their application of logistic regression approaches to identify recovery targets."-->
+
+
+Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. <!--For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  -->One assumption of this method is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance among CUs or relative productivities and capacities of CUs is non-stationary, logistic regression LRPs may not represent serious harm under current or future conditions. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs varies (e.g., due to change towards weak stock management or when exploitation varies with the abundance of other species).  Uncertainties in CU status are accounted for explicitly when CU- and SMU-level models are statistically integrated (Principle 5). Logistic regression LRPs are aligned with Principle 6 to the extent that aggregate abundances are an acceptably reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from the multidimensional approach recommended under the WSP.
 
 <!--CH: moved to uncertainties section in last chapter "Also, it is not possible to assess sensitivity of LRPs to  structural assumptions about covariance in population dynamics among CU and the relationship between aggregate abundances and CU statuses, as the LRP depends only on the logistic fit to observed data." -->
 
 **Projection LRPs** 
 
-Similar to logistic regression LRPs, projection LRPs rely on an underlying relationship between aggregate abundances and status of component CUs to identify an LRP based on aggregate abundance. However, unlike logistic regression LRPs, for projection LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from forward projections instead of historical data.   
+Similar to logistic regression LRPs, projection LRPs rely on an underlying relationship between aggregate abundances and status of component CUs to identify an LRP based on aggregate abundance. However, unlike logistic regression LRPs, for projection LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from projections instead of historical data.   
 
-The projection LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run over an initialization period to remove the impacts of initial conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). We developed projection LRPs for SMUs that are managed under constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As for logistic regression LRPs, status was estimated from a single metric rather than the Rapid Multidimensional Scanner Tool because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Tool.
+The projection LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run over an initialization period to remove the impacts of initial conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). We developed projection LRPs for SMUs that are managed under constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As for logistic regression LRPs, status was estimated from a single metric rather than the Salmon Scanner because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner.
 
 One advantage of the approach for projection LRPs over logistic regression LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression LRPs, this method is not limited by historical data on CU status. To implement projection LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (In review) and provided online (see Appendix \@ref(app:links)).  
 
@@ -233,11 +243,10 @@ Similar to logistic regression LRPs, for projection LRPs the uncertainty in CU b
 
 Also, similar to logistic regression based LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging by combining results from stochastic random trials across those structural assumptions. See our implementation for Interior Fraser Coho Salmon in Holt et al. (In review) for more details.
 
-Similar to logistic regression LRPs, projection LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP and that the emergent (projected) relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Also, similar to logistic regression LRPs, projection LRPs use only one metric of annual estimates of spawner abundances, and therefore do not use the best available information (Principle 1) when CUs statuses rely on other metrics, such as trends in data-limited contexts.
+*Alignment with LRP Principles*
+As for logistic regression LRPs, projection LRPs use only one metric of annual estimates of spawner abundances, and therefore do not use the best available information (Principle 1) when CUs statuses rely on other metrics, such as trends in data-limited contexts. Also similar to logistic regression LRPs, projection LRPs represent levels above serious harm (Principle 2) as indicated by status of any one CU being in the Red zone under the WSP, given the projection-based relationship between aggregate abundances and probability of all CUs being above their lower benchmark. 
 
-Similar to logistic regression LRPs, projection LRPs are operational (Principle 3) to some extent when harvest management occurs at the aggregate level and require aggregate-abundance based LRP to inform management decisions. However, like logistic regression LRPs they are more difficult to communicate being derived from projections under assumptions of equilibrium, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify. <!--CH moved to CH6 of case study paper to simplify text here, and b/c showing the sensitivity to ER actually makes this methods more useful/operational, not less, at least according to Wilf. "Furthermore, projection LRPs are sensitive to exploitation rates, being higher under high exploitation rates and vice versa. Therefore an projection LRP developed under current exploitation cannot be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives."--> Reliability of estimation (Principle 4) depends on the underlying parameter distributions and model structure capturing the plausible range of true underlying dynamics. Similar to logistic regression LRPs, for this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs. But unlike logistic regression LRPs, this method can integrate plausible ranges of parameter and structural uncertainties that may differ from those observed historically. Reliability of LRP estimates depends on the reliability of underlying model parameters and structure.
-
-Similar to logistic regression LRPs, projection LRPs are aligned with Principle 6 to the extent that aggregate abundances are a reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from multidimensional approach recommended under the WSP.
+As for logistic regression LRPs, projection LRPs are operational (Principle 3) when harvest management occurs at the aggregate level and requires an aggregate abundance LRP to inform decisions. However, these LRPs are more difficult to communicate being derived from projections under assumptions of equilibrium, and they require the choice of probability of all CUs being above their lower benchmarks which may be difficult to choose and justify. <!--CH moved to CH6 of case study paper to simplify text here, and b/c showing the sensitivity to ER actually makes this methods more useful/operational, not less, at least according to Wilf. "Furthermore, projection LRPs are sensitive to exploitation rates, being higher under high exploitation rates and vice versa. Therefore an projection LRP developed under current exploitation cannot be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives."--> Reliability of estimation (Principle 4) depends on the underlying parameter distributions and model structure capturing the plausible range of true underlying dynamics.<!--Reliability of LRP estimates depends on the reliability of underlying model parameters and structure. --> As for logistic regression LRPs, uncertainties can be propagated from CU-level benchmarks and status to LRPs (Principle 5). But unlike logistic regression LRPs, this method can integrate plausible ranges of parameter and structural uncertainties that may differ from those observed historically. Similar to logistic regression LRPs, projection LRPs are aligned with Principle 6 to the extent that aggregate abundances are a reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from multidimensional approach recommended under the WSP.
 
 
 
